    * [JBSEAM-4275] - Hibernate Search-enabled examples fail to deploy to jboss-embedded
    * [JBSEAM-4276] - A JBDS generated WAR project with reverse-engineered entities doesn't work
    * [JBSEAM-4278] - @Create methods on @Startup components are called without a transaction
    * [JBSEAM-4289] - DBUnitSeamTest can't be executed in the same suite as SeamTest

** Feature Request
    * [JBSEAM-3119] - Multiple WAR in EAR verification, example, and document
    * [JBSEAM-4219] - Allow use of RuleFlow in Seam RuleBase
    * [JBSEAM-4241] - Add ability to retract facts from workingmemory in pageflow

** Patch
    * [JBSEAM-4245] - Disinjection in Seam-Guice

** Task
    * [JBSEAM-4068] - Use JBoss 5 as default target. Deprecate 4.2.x
    * [JBSEAM-4195] - Merge enhanced servlet mocks into core
    * [JBSEAM-4221] - Document SeamTextParser.Sanitizer
    * [JBSEAM-4291] - Upgrade TestNG


Release Notes - Seam - Version 2.2.0.CR1

** Bug
    * [JBSEAM-2523] - Identity component should be scoped to the WAR module
    * [JBSEAM-2746] - Hibernate Search doesn't update index correctly
    * [JBSEAM-3849] - ClassLoader cannot find xhtml files when scanning page.xml files in an EAR with Multiple WARs
    * [JBSEAM-4034] - Using outdated Drools API in documentation example
    * [JBSEAM-4172] - s:validateEquality doesn't work with empty values
    * [JBSEAM-4205] - Multiple p:paragraph's in p:cell cause text duplication
    * [JBSEAM-4207] - Security xsd for components.xml is incorrect
    * [JBSEAM-4230] - Target eclipseclasspath generates .classpath file with path to local maven repository for tools.jar, while this shouldn't be in maven repo
    * [JBSEAM-4244] - fix for JBSEAM-4131 introduced a performance regression
    * [JBSEAM-4246] - Addition of numberDepth to p:chapter
    * [JBSEAM-4258] - Redirect in navigation rules doesn't work
    * [JBSEAM-4262] - Bad classpath for eclipse project in seam-gen generated .classpath file