@@ -350,11 +350,11 @@
          </exclusions>
       </dependency>
 
-	  <dependency>
-		 <groupId>org.jboss.resteasy</groupId>
-		 <artifactId>resteasy-atom-provider</artifactId>
-		 <version>1.1-RC2</version>
-	  </dependency>
+      <dependency>
+        <groupId>org.jboss.resteasy</groupId>
+        <artifactId>resteasy-atom-provider</artifactId>
+        <version>1.1-RC2</version>
+      </dependency>
 
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -852,7 +852,7 @@
       <dependency>
         <groupId>org.jboss.el</groupId>
         <artifactId>jboss-el</artifactId>
-        <version>1.0_02.CR4</version>
+        <version>1.0_02.CR5</version>
       </dependency>
 
       <dependency>
@@ -1236,13 +1236,13 @@
          <artifactId>wicket-datetime</artifactId>
          <version>${version.wicket}</version>
       </dependency>
-
-	  <dependency>
-		<groupId>org.slf4j</groupId>
-		<artifactId>slf4j-api</artifactId>
-		<version>1.4.2</version>
-	  </dependency>
-		  
+      
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.4.2</version>
+      </dependency>
+      
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
