@@ -11,7 +11,7 @@
 
     <page view-id="/search.xhtml">
         <rewrite pattern="/search/{searchPattern}"/> 
-        <rewrite pattern="/search"/>
+        <!-- <rewrite pattern="/search"/> -->
         
         <param name="searchPattern" 
                value="#{searchService.searchPattern}"/>     
